q4/www/css/styles.css
@import url(https://fonts.googleapis.com/css?family=Quicksand:400,700,400italic,700italic);
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
@import url(https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap);
@font-face {
    font-family: 'bobs_burgers_2regular';
    src: url('bobs_burgers_font/_2-webfont.woff2') format('woff2'),
         url('bobs_burgers_font/bobs_burgers_2-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'bobs_burgersregular';
    src: url('bobs_burgers_font/bobs_burgers-webfont.woff2') format('woff2'),
         url('bobs_burgers_font/bobs_burgers-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

* {
  box-sizing: border-box;
}

/* Changed from the original one and move the cp202-a1-serif fonts to here */
body {
  font-family: 'Baloo Bhai', cursive;
  font-size: 20px;
  font-weight: normal;
  background-image: url("../img/background.jpg");
  background-position: center;
  background-attachment: fixed;
  margin: 50px;
  color: white;
}

/* Changed for h1 and h10 */
header {
  background-color: #d24a88;
  padding: 1px;
  color: white;
  text-align: center;
  opacity: 0.9
}

/* Navigation bar*/
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: white;
  opacity: 0.9
}

li {
  float: left;
  color: #423131;
}

li a {
  display: block;
  color: #423131;
  text-align: center;
  padding: 14px 30px;
  text-decoration: none;
}

li a:hover:not(.active) {
  background-color: #217eff;
  color: white;
}

li:last-child {
  float: right;
}

.active {
  background-color: #f8dc4a;
}

.fixed {
  background-color: #f8dc4a;
}

/* This heading is specifically for University homepage */
h1 {
  color: white;
  font-family: bobs_burgers_2regular, bobs_burgersregular,serif;
  font-size: 100px;
  font-weight: normal;
}

h2 {
  color: white;
  font-size: 1.5em;
  font-family: bobs_burgersregular, bobs_burgers_2regular,serif;
  font-weight: normal;
}

h2 a:hover {
  color: #217eff;
}

h3 {
  color: white;
}

h3 a:hover {
  color: #217eff;
}

a:link {
  text-decoration: none;
}

a:visited {
  text-decoration: none;
  color: inherit;
}

/* Type paragraphs without their first letters change and allow spaces*/
pre {
  font-family: 'Baloo Bhai', cursive;
  font-weight: normal;
  text-align: center;
  color: white;
}

button {
  font-family: 'Baloo Bhai', cursive;
  font-size: 1.0em;
  background-color: #f8dc4a;
  border: none;
  color: #423131;
  padding: 10px 25px;
  text-align: center;
  cursor: pointer;
}

button:hover {
  background-color: #217eff;
  color: white;
}

.left-column {
  float: left;
  width: 50.0%;
  background: #423131;
  padding: 20px;
  opacity: 0.95;
  /*border-right-style: dotted;
  border-width: medium;*/
}

.left-column img {
  width: 100%;
}

.right-column {
  float: left;
  padding: 20px;
  width: 50.0%;
  background-color: #423131;
  opacity: 0.95;
  border-left-style: dashed;
  border-width: thick;
}

.right-column img {
   width: 100%;
}

.one-column {
  float: left;
  padding: 20px;
  width: 100.0%;
  background-color: #423131;
  opacity: 0.95;
}

.one-column img {
   width: 32.8%;
}

/* Clear floats after the columns */
section:after {
  content: "";
  display: table;
  clear: both;
}

/* Changed from the original color to this to make them cute */
footer {
  background-color: #d24a88;
  padding: 10px;
  text-align: center;
  font-size: 15px;
  color: white;
  opacity: 0.9;
}

footer a:hover {
  color: #217eff;
}

footer a:active {
  /*text-decoration: none;*/
  color: #423131;
}

/* Stack columns */
@media (max-width: 600px) {
  .left-column, .right-column {
    width: 100%;
    height: auto;
  }
}

